--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -205,3 +205,14 @@ ja:
       long: "%Y/%m/%d %H:%M"
       short: "%m/%d %H:%M"
     pm: 午後
+  activerecord:
+    models:
+      plan: 旅行
+    attributes:
+      plan:
+        title: 企画名
+        date: 開催日
+        place: 旅行先
+        meeting_place: 集合場所
+        meeting_time: 集合時間
+        content: 企画内容
