--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -217,3 +217,10 @@ ja:
         meeting_time: 集合時間
         image: 画像
         content: 企画内容
+  views:
+    pagination:
+      first: "&laquo; 最初"
+      last: "最後 &raquo;"
+      previous: "&lsaquo; 前"
+      next: "次 &rsaquo;"
+      truncate: "..."
